--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="style.css">
+    <script>src = "script.js"</script>
+
+
+
+    <!--Bootstrap file-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-    
+    <!-- As a heading -->
+    <nav class="navbar bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Quizapp</span>
+        </div>
+    </nav>
+    <div class="cardContainer">
+        <div class="card w-50">
+            <img src="img/quiz.jpg" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title">Frage</h5>
+            </div>
+            <div class="card width100" style="width: 18rem;">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+                <div class="card-footer d-flex justify-content-around">
+                    <div><b>1</b> von <b>5</b> Fragen</div>
+                    <div><button type="button" class="btn btn-primary btn-lg">Nächste Frage</button></div>
+                </div>
+            </div>
+        </div>
 </body>
+
 </html>
