--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </div>
             <div class="card width100" style="width: 18rem;">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item quiz-answer-card" id="answer_1" onclick="answer(1)">An item</li>
-                    <li class="list-group-item quiz-answer-card" id="answer_2" onclick="answer(2)">A second item</li>
-                    <li class="list-group-item quiz-answer-card" id="answer_3" onclick="answer(3)">A third item</li>
-                    <li class="list-group-item quiz-answer-card" id="answer_4" onclick="answer(4)">A third item</li>
+                    <li class="list-group-item quiz-answer-card" id="answer_1" onclick="answer('answer_1')">An item</li>
+                    <li class="list-group-item quiz-answer-card" id="answer_2" onclick="answer('answer_2')">A second item</li>
+                    <li class="list-group-item quiz-answer-card" id="answer_3" onclick="answer('answer_3')">A third item</li>
+                    <li class="list-group-item quiz-answer-card" id="answer_4" onclick="answer('answer_4')">A third item</li>
                 </ul>
                 <div class="card-footer d-flex justify-content-around">
                     <div><b>1</b> von <b id="numberOfQuestions"></b> Fragen</div>
