--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <li class="list-group-item quiz-answer-card" id="answer_4" onclick="answer('answer_4')">A third item</li>
                 </ul>
                 <div class="card-footer d-flex justify-content-around">
-                    <div><b>1</b> von <b id="numberOfQuestions"></b> Fragen</div>
-                    <div><button type="button" class="btn btn-primary btn-lg">Nächste Frage</button></div>
+                    <div><b id="numberCurrentQuestion"></b> von <b id="numberOfQuestions"></b> Fragen</div>
+                    <div><button type="button" class="btn btn-primary btn-lg" id="next-button" onclick="nextQuestion()" disabled>Nächste Frage</button></div>
                 </div>
             </div>
         </div>
