--- a/question_design.html
+++ b/question_design.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>HTML Quiz</title>
 
     <!--Bootstrap file-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,7 +20,6 @@
 
 <body onload="init()">
     
-
     <div class="alignment" id="endScreen" style="display: none;">
         <div class="completeCard">
             <div class="navBar">
