--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                         <div class="text-decoration">
                             <h3>Ready for the Challenge?</h3>
                         </div>
-                        <button type="button" class="btn btn-primary btn-sm"><a
-                                href="question_design.html">Start</a></button>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="location.href='question_design.html';">Start</button>
                     </div>
                 </div>
             </div>
