--- a/question_design.html
+++ b/question_design.html
@@ -23,7 +23,7 @@
     <div class="alignment" id="endScreen" style="display: none;">
         <div class="completeCard">
             <div class="navBar">
-                <div class="logo-size"> <img src="Quizapp Dark/Quizapp/logo.png"></div>
+                <div class="logo-size"> <a href="index.html"><img src="Quizapp Dark/Quizapp/logo.png"></a></div>
                 <div class="table">
                     <p> HTML</p>
                     <p> CSS</p>
@@ -67,7 +67,7 @@
     <div class="alignment" id="questionBody">
         <div class="completeCard">
             <div class="navBar">
-                <div class="logo-size"> <img src="Quizapp Dark/Quizapp/logo.png"></div>
+                <div class="logo-size"><a href="index.html"><img src="Quizapp Dark/Quizapp/logo.png"></a></div>
                 <div class="table">
                     <p> HTML</p>
                     <p> CSS</p>
