--- a/index.html
+++ b/index.html
@@ -31,22 +31,18 @@
 
             </div>
 
-
             <div class="questions">
-
-                <div>
-                    <div class="welcome">
-                        <div class="text-decoration">
-                            <h1>Welcome to <br> The Awesome HTML Quiz</h1>
-                        </div>
-                        <div class="text-decoration">
-                            <h3>Ready for the Challenge?</h3>
-                        </div>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="location.href='question_design.html';">Start</button>
+                <div class="welcome">
+                    <div class="text-decoration">
+                        <h1>Welcome to <br> The Awesome HTML Quiz</h1>
                     </div>
+                    <div class="text-decoration">
+                        <h3>Ready for the Challenge?</h3>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-lg mt-5"
+                        onclick="location.href='question_design.html';">Start</button>
                 </div>
             </div>
-
         </div>
     </div>
 </body>
